Corregido package y clase principal para despliegue en Render